concord_macros/tests/dsl/fail/fail_policies_rejects_default_cache.rs
use concord_macros::api;

api! {
    client BadPoliciesDefaultCacheApi {
        base "https://example.com"

        cache standard {
            ttl 60s
        }

        policies {
            cache standard
        }
    }

    GET Ping
    path ["ping"]
    -> Text<String>
}

fn main() {}
