concord_macros/tests/dsl/fail/fail_policies_rejects_default_cache.stderr
error: default cache policy is not allowed in policies block; use default { ... }
  --> tests/dsl/fail/fail_policies_rejects_default_cache.rs:12:13
   |
12 |             cache standard
   |             ^^^^^
